--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <div class="head">
-        <div class="text">
+        <div class="text>
         
         <span class="text1">THE BEST COMMERCIAL REAL<br> EASTATE IN AND ARROUND<br> BUCKVILLE PARK</span><br>
         <span class="text2">We are a full srvice brokerage firm in in the<br> buckvaille park area out team of experts is ready to help<br> you with any question you have</span>
@@ -20,14 +20,14 @@
     <div class="box2">
         <img src="./image/Awards.jpg">
         <span>our milestones</span>
-       <span> share your credentials affilation,our awrds here.you can use the icons below to share logos or seals you want t highlights</span>
+ <span> share your credentials affilation,our awrds here.you can use the icons below to share logos or seals you want t highlights</span>
 <span>2025</span>
 <span>geat workplace for diversity</span>
 <span>2025 real estate agency or the year</span>
 <span>2025most admired comany</span>
     </div>
     <div>
-        <img src="./image/Listings.jpg">  
+        <img src="./image/Listings.jpg">
     </div>
     <div>
         <img src="./image/Services.jpg">
